different messages for gene not found and for no gene profiles above cutoff. This also solves some bugs (select box and menu and barchart breaking on validation error)

--- a/web/src/main/webapp/resources/css/atlas.css
+++ b/web/src/main/webapp/resources/css/atlas.css
@@ -79,6 +79,8 @@ textarea, .chzn-container {
 
 .error {
     color: red;
+    display:block;
+    padding-bottom:5px;
 }
 
 .page-contents {
